// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorEmptyHandler displays the Component 1`] = `
<div>
  Test
</div>
`;

exports[`ErrorEmptyHandler displays the empty-message 1`] = `
<div
  className="handler--empty"
>
  0 Articles found
</div>
`;

exports[`ErrorEmptyHandler displays the error-message 1`] = `
<div
  className="handler--error"
>
  failed to load articles
</div>
`;
